improve readability: use more autoboxing for integers